<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:defaultValue="Grid"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:key="note_style_key"
            android:title="@string/note_style"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_note_style" />
        <ListPreference
            android:defaultValue="@string/system_theme_value"
            android:entries="@array/theme_array"
            android:entryValues="@array/theme_values"
            android:key="theme_key"
            android:title="@string/theme"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_color_palette" />
        <ListPreference
            android:defaultValue="@string/default_lang_value"
            android:entries="@array/app_language_array"
            android:entryValues="@array/app_language_values"
            android:key="@string/language_key"
            android:title="@string/language"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_language"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="20"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="title_size_key"
            android:title="@string/title_text_size"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_text_size" />
        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="content_size_key"
            android:title="@string/content_text_size"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_text_size" />
    </PreferenceCategory>
</PreferenceScreen>